--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body{
 }
 
 
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 700px) {
     .container {
         display: flex;
         padding: 15px;
@@ -24,6 +24,7 @@ body{
         flex-wrap: wrap;
         background-color: white;
         text-align: justify;
+        background-color: pink; !important
     }
     
     .btn {
